Add comment for image path verification
Added a comment to ensure the image path is correct.

--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <img src="haveamoment.png" alt="Have a Moment">
+    <img src="haveamoment.png" alt="Have a Moment"> <!-- Ensure this path is correct -->
     <script>
         // Function to vibrate the device
         function vibrateDevice() {
